--- a/css/map2.css
+++ b/css/map2.css
@@ -3,6 +3,11 @@ body {
     padding: 0;
 }
 
+h2 {
+    margin: 10px;
+    font-size: 18px;
+}
+
 #map {
     position: absolute;
     top: 0;
@@ -10,7 +15,6 @@ body {
     width: 100%;
 }
 
-/* the layout of the legend panel */
 #legend {
     position: absolute;
     bottom: 0;
@@ -25,14 +29,12 @@ body {
     font-family: 'Open Sans', sans-serif;
 }
 
-/* each line for a break */
 .break {
     position: relative;
     margin: 0px;
     padding: 0px;
 }
 
-/* basic style for a dot/circle */
 .dot {
     display: inline-block;
     margin-top: 5px;
@@ -40,7 +42,6 @@ body {
     opacity: 0.6;
 }
 
-/* the label for the dot */
 .dot-label {
     position: absolute;
     top: 0;
@@ -48,30 +49,27 @@ body {
     font-style: italic;
 }
 
-/* the text color of a hyper link */
 a {
     color: black
 }
 
-#title {
+.map-overlay {
     position: absolute;
-    top: 0;
+    bottom: 0;
     left: 0;
-    margin-top: 20px;
+    background: rgba(255, 255, 255, 0.8);
+    border-style: solid;
+    border-width: 1px;
+    border-color: rgba(0, 0, 0, 0.2);
     margin-left: 20px;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 25pt;
-    color: white
+    font-family: Arial, sans-serif;
+    overflow: auto;
+    border-radius: 3px;
 }
 
-
-#subtitle {
-    position: absolute;
+#features {
     top: 0;
-    left: 0;
-    margin-top: 70px;
-    margin-left: 190px;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 15pt;
-    color: white
+    height: 75px;
+    margin-top: 20px;
+    width: 250px;
 }
